fixes #63 -> Mobile nav hamburger button not positioned correctly at <800px BP fixes #66 -> 'Read more about Safecoin' Link not working on homepage for mobile BP. Works on desktop. fixes #76 -> FAQ page font is too big on desktop display (in large viewport) fixes #91 -> Add all sizes and resolutions of favicons fixes #95 -> Overlap of text box across text on smaller screen sizes on home page

--- a/src/sass/_xsmall/common.sass
+++ b/src/sass/_xsmall/common.sass
@@ -8,10 +8,20 @@
       padding-left: get-single-column() * 2
       padding-right: get-single-column() * 2
       .site-logo
-        width: get-single-column() * 11
+        min-width: get-single-column() * 11
+        width: 100%
+        padding-left: 80px
+        margin-left: -80px
         a
+          display: block
+          width: 100%
+          height: 100%
           img
-            width: 100%
+            width: auto
+            height: 100%
+            max-width: 100%
+            max-height: 100%
+            vertical-align: middle
   .header-adjust
     padding-top: 33px + $header-content-height
   .lnk-underline
