--- a/src/sass/_xsmall/home.sass
+++ b/src/sass/_xsmall/home.sass
@@ -365,7 +365,7 @@
         .home-lay-2-bg
           display: block
           width: 100%
-          z-index: 3
+          z-index: 2
           .home-lay-2-bg-i
             width: get-single-column() * 4
             padding: 0
